# sylva

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  INSTALL.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  fix_all.sh  generate_report.py  index.html  netlify.toml  package.json  pyproject.toml  run_forecast.py  setup.cfg  setup.py  test_pedrogao.py  upload_sylva_final.py  upload_sylva_v2.5.4.py  upload_sylva_v2.5.5.py  validation_report.json
Netlify/: .gitignore  organize.sh  package.json
Netlify/config/: api-keys.js
Netlify/functions/: get-fire-zones.js  sylva-health.js  zones.js
Netlify/public/: dashboard.html  documentation.html  index.html
Netlify/scripts/: update-report.js
data/fuel_models/: dry_grassland.json  mediterranean_maquis.json  pinus_halepensis.json  quercus_ilex.json
docs/: conf.py  sylva_resarech_paper.docx
examples/: __init__.py  quickstart.py
notebooks/: 01_parameter_extraction.ipynb  02_rsi_calculation.ipynb  03_probability_calibration.ipynb  04_validation_analysis.ipynb  05_case_study_walkthrough.ipynb
reports/: __init__.py
reports/daily/: __init__.py  sylva_briefing_2026-02-13_attica_greece.json  sylva_briefing_2026-02-13_attica_greece.txt  sylva_briefing_2026-02-13_attica_greece_DASHBOARD.txt  sylva_briefing_2026-02-13_attica_greece_temp.json  sylva_briefing_template.json  sylva_operational_dashboard.py  sylva_operational_report.py  to_html.py  to_txt.py  to_txt_fixed.py
scripts/: __init__.py  enhanced_daily_report.py  generate_citation.py  generate_daily_report.py  run_daily_reports.sh
sylva_fire/: __init__.py
sylva_fire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sylva_fire/core/: __init__.py  byram.py  rothermel.py  thermodynamics.py  van_wagner.py
sylva_fire/data/: __init__.py
sylva_fire/forecasting/: __init__.py  crown_fire_probability.py  escalation_trend.py  rapid_spread_forecast.py  spread_projection.py
sylva_fire/integration/: __init__.py  confidence_estimator.py  probability_calibration.py  rsi_calculator.py
sylva_fire/operational/: __init__.py  containment_difficulty.py  containment_strategy.py  tactical_dashboard.py
sylva_fire/parameters/: __init__.py  atmospheric.py  drought.py  fuel_moisture.py  fuel_structure.py  terrain.py
sylva_fire/utils/: __init__.py  constants.py  fuel_coefficients.py
sylva_fire/validation/: __init__.py  performance_metrics.py
sylva_fire/visualization/: __init__.py
tests/: __init__.py  context.py  test_quickstart.py
