[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sylva-fire"
version = "2.5.5"
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"},
]
description = "A Thermodynamic-Fuel Continuum Framework for Wildfire Spread Rate Estimation in Mediterranean Forest Systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC-BY-4.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Creative Commons Attribution 4.0 International (CC BY 4.0)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Emergency Services",
]

[project.urls]
Homepage = "https://gitlab.com/gitdeeper3/sylva"
Documentation = "https://sylva-fire.readthedocs.io"
Repository = "https://gitlab.com/gitdeeper3/sylva.git"
Issues = "https://gitlab.com/gitdeeper3/sylva/-/issues"
DOI = "https://zenodo.org/records/18627186"

[project.scripts]
sylva-forecast = "sylva.scripts.cli:main"
sylva-download = "sylva.scripts.download_sentinel2:main"
sylva-validate = "sylva.scripts.validation:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
