[metadata]
name = sylva-fire
version = 0.1.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
description = Thermodynamic-Fuel Continuum Framework for Wildfire Spread Rate Estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/gitdeeper3/sylva
license = CC-BY-4.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Creative Commons Attribution 4.0 International (CC BY 4.0)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
include = sylva, sylva.*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.8
    black>=20.8
    pre-commit>=2.0
docs =
    mkdocs>=1.1
    mkdocs-material>=7.0

[bdist_wheel]
universal = 0
